fix(footer): align text center

--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -4,6 +4,7 @@ footer {
   background-color: var(--tan);
   display: flex;
   justify-content: center;
+  align-items: center;
   position: relative;
   bottom: 0;
   width: 100%;
